feat: change from jobs and tasks to records
